--- a/demo/_config.yml
+++ b/demo/_config.yml
@@ -1,6 +1,6 @@
 theme: garth-jekyll-theme
 
-name: A site title
+title: This is Garth
 description: "Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 collections:
