--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@ exclude:
 - CNAME
 - Gemfile
 - Gemfile.lock
+- demo/*
+- garth-jekyll-theme.gemspec
 
 # 2. Installed Gems
 gems:
 - jekyll-paginate
-
-theme: garth-jekyll-theme
 
 # 3. Gem settings
 paginate: 2 # jekyll-paginate > items per page
