--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,13 @@
 # 1. Files excluded from Jekyll builds
 exclude:
 - README.md
+- CODE_OF_CONDUCT.md
+- CONTRIBUTING.md
 - screenshot.png
 - LICENSE
 - CNAME
 - Gemfile
 - Gemfile.lock
-- demo/*
 - garth-jekyll-theme.gemspec
 
 # 2. Installed Gems
