--- a/_config.yml
+++ b/_config.yml
@@ -62,5 +62,5 @@ title: "Garth" # Site name or title
 logo: "/assets/logo.svg" # Site logo
 description: "A stupidly simple theme for Jekyll, using the official Jekyll theme implementation" # Site description and default description
 url: "https://garth.darn.es" # Site url
-baseurl: "/toast"
+baseurl: ""
 lang: en-GB
