--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ collections:
   posts:
     title: Blog # Needed for Siteleaf
     output: true
-    description: "This is just a demo, find out more [about Garth](about)" # The post list page content
+    description: "This is merely a demo, find out more [about Garth](about)" # The post list page content
 
 # 6. Jekyll collections settings
 defaults:
@@ -61,7 +61,7 @@ encoding: utf-8 # Make sure the encoding is right
 title: "Garth" # Site name or title
 logo: "/assets/logo.svg" # Site logo
 # favicon: "/favicon.ico" # Uncomment to add custom favicon, or leave as is to use site logo
-description: "A stupidly simple theme for Jekyll, using the official Jekyll theme implementation" # Site description and default description
+description: "A really basic theme for Jekyll, using the official Jekyll theme implementation" # Site description and default description
 url: "https://garth.darn.es" # Site url
 baseurl: ""
 lang: en-GB
